[package]
name = "test_rust"
edition = "2021"
version = "0.1.0"

[[bin]]
name = "test_rust"
path = "test_rust.rs"

[dependencies]
regex = "1.11.1"

# to optimize bundle size:
# https://github.com/johnthagen/min-sized-rust
#
# [profile.release]
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
#
# [profile.release.package."*"]
# strip = true
# opt-level = "z"
# codegen-units = 1
